get + get id + post
